--- a/index.html
+++ b/index.html
@@ -8,87 +8,98 @@
   </head>
   <title>pickle</title>
   <body>
-    <header id="header">
-      <span id="image">
-        <img
-          id="header-img"
-          src="https://thumbs.dreamstime.com/b/pickles-icon-thin-linear-outline-isolated-white-background-gastronomy-collection-line-vector-sign-symbol-web-165501773.jpg"
-          alt="pickle logo"
-        />
-      </span>
-      <h1>pickle</h1>
-      <nav id="nav-bar">
-        <ul>
-          <li><a href="index.html" class="nav-link">production</a></li>
-          <br />
-          <li><a href="#hav" class="nav-link">other products</a></li>
-          <br />
-          <li><a href="#cat" class="nav-link">pricing</a></li>
-        </ul>
-      </nav>
-    </header>
-    <br />
-
-    <a id="hav"></a>
-    <div id="has">
-      <p>
-        <strong>Ingridients</strong><br />Lorem ipsum dolor sit amet
-        consectetur, adipisicing elit. Id illum iste animi beatae. Deleniti,
-        odit.
-      </p>
-      <p>
-        <strong>Delivery</strong><br />Lorem ipsum, dolor sit amet consectetur
-        adipisicing elit. Corporis, fugiat.
-      </p>
-      <p id="v">video</p>
-      <video width="100%" height="280" controls="controls autoplay">
-        <source scr="https://youtu.be/LpIkXA08VXM" type="video/mp4" />
-      </video>
-      <br />
-      <form id="form" action="https://www.freecodecamp.com/email-submit">
-        E-mail:<br />
-        <input id="email" type="email" placeholder="Your E-mail ID" /><br />
-        <div id="button"><button type="submit">submit</button></div>
-      </form>
-      <div class="container-flex">
-        <a id="cat"></a>
-        <div class="card">
-          <h3>mixed veg pickle</h3>
-          <h4>$45</h4>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
-            ullam?
-          </p>
-          <button type="submit">select</button>
-        </div>
-        <div class="card">
-          <h3>mango pickle</h3>
-          <h4>$50</h4>
-          <p>Mollitia soluta modi possimus temporibus dicta. Architecto?</p>
-          <button type="submit">select</button>
-        </div>
-        <div class="card">
-          <h3>lemon pickle</h3>
-          <h4>$60</h4>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-          <button type="submit">select</button>
-        </div>
-      </div>
+    <div id="set">
+      <header id="header">
+        <span id="image">
+          <img
+            id="header-img"
+            src="https://thumbs.dreamstime.com/b/pickles-icon-thin-linear-outline-isolated-white-background-gastronomy-collection-line-vector-sign-symbol-web-165501773.jpg"
+            alt="pickle logo"
+          />
+        </span>
+        <h1>pickle</h1>
+        <nav id="nav-bar">
+          <ul>
+            <li><a href="index.html" class="nav-link">production</a></li>
+            <br />
+            <li><a href="#hav" class="nav-link">other products</a></li>
+            <br />
+            <li><a href="#cat" class="nav-link">pricing</a></li>
+          </ul>
+        </nav>
+      </header>
     </div>
+    <br />
+    <div id="big">
+      <a id="hav"></a>
+      <div id="has">
+        <p>
+          <strong>Ingridients</strong><br />Lorem ipsum dolor sit amet
+          consectetur, adipisicing elit. Id illum iste animi beatae. Deleniti,
+          odit.
+        </p>
+        <p>
+          <strong>Delivery</strong><br />Lorem ipsum, dolor sit amet consectetur
+          adipisicing elit. Corporis, fugiat.
+        </p>
+        <p id="v">video</p>
 
-    <footer class="footer bg-dark py-5">
-      <div class="r">
-        <div class="one">pickles<br /></div>
-        <div class="two">Copyright &copy; 2022</div>
+        <iframe
+          width="560"
+          height="315"
+          src="https://www.youtube.com/embed/sgzWLoZ2mhc"
+          title="YouTube video player"
+          frameborder="0"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
 
-        <div class="three">
-          <nav>
-            <a href="index.html" class="nav-link">privacy</a> <br />
-            <a href="#hav" class="nav-link">terms</a> <br />
-            <a href="#cat" class="nav-link">contacts</a> <br />
-          </nav>
+        <br />
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          E-mail:<br />
+          <input id="email" type="email" placeholder="Your E-mail ID" /><br />
+          <div id="button"><button type="submit">submit</button></div>
+        </form>
+        <div class="container-flex">
+          <a id="cat"></a>
+          <div class="card">
+            <h3>mixed veg pickle</h3>
+            <h4>$45</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis,
+              ullam?
+            </p>
+            <button type="submit">select</button>
+          </div>
+          <div class="card">
+            <h3>mango pickle</h3>
+            <h4>$50</h4>
+            <p>Mollitia soluta modi possimus temporibus dicta. Architecto?</p>
+            <button type="submit">select</button>
+          </div>
+          <div class="card">
+            <h3>lemon pickle</h3>
+            <h4>$60</h4>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+            <button type="submit">select</button>
+          </div>
         </div>
       </div>
-    </footer>
+
+      <footer class="footer bg-dark py-5">
+        <div class="r">
+          <div class="one">pickles<br /></div>
+          <div class="two">Copyright &copy; 2022</div>
+
+          <div class="three">
+            <nav>
+              <a href="index.html" class="nav-link">privacy</a> <br />
+              <a href="#hav" class="nav-link">terms</a> <br />
+              <a href="#cat" class="nav-link">contacts</a> <br />
+            </nav>
+          </div>
+        </div>
+      </footer>
+    </div>
   </body>
 </html>
